--- a/package.json
+++ b/package.json
@@ -3,19 +3,22 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3000",
+    "dev": "next dev -p 3001",
     "build": "next build",
-    "start": "next start -p 3000",
+    "start": "next start -p 3001",
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "next": "14.2.16",
     "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "axios": "^1.7.7"
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
+    "@types/node": "24.10.0",
+    "@types/react": "19.2.2",
     "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.16"
+    "eslint-config-next": "14.2.16",
+    "typescript": "5.9.3"
   }
 }
